--- a/desafios/desafio12/index.html
+++ b/desafios/desafio12/index.html
@@ -28,7 +28,7 @@
     </p>
 </section>
 
-<section class="imagem">
+<section class="imagem" id="imagem1"> 
     <p>
         Não é mais como era antes <br>
         É tudo abreviado <br>
@@ -61,11 +61,15 @@
     </p>
 </section>
 
-<section class="imagem">
+<section class="imagem" id="imagem2">
     <p>
         Tenho saudade das cartas <br>
         Escritas com a própria mão <br>
         Mandava no mês de Junho <br>
+        Só chegava no Verão <br>
+        Mas matava a saudade <br>
+        Era texto de verdade <br>
+        Nas linhas do coração.<br>
     </p>
 </section>
 
@@ -77,9 +81,8 @@
         A pessoa foi embora <br>
         Abriu outro aplicativo <br>
         O mundo ficou cativo <br>
-        Da tecnologia do agora. <br>
+        Da tecnologia do agora.<br>
     </p>
-    
     <p>
         Felizmente, pra orar <br>
         Não precisa de internet <br>
@@ -93,7 +96,7 @@
 </section>
     <br>
     <footer> 
-        Site criado por Leonardo Henrique, seguindo os passos do Prof Gustavo Guanabara
+        <p>Site criado por Leonardo Henrique, seguindo os passos do Prof Gustavo Guanabara</p>
     </footer>
 </body>
 </html>
