--- a/exercicios/ex0023/tabela001.html
+++ b/exercicios/ex0023/tabela001.html
@@ -11,21 +11,20 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
             border:2px solid black;
-        }
-        
-        tr.linha {
-            background-color: gray;
         }
 
         td {
             border: 1px solid #000;
             padding: 8px;
+            text-align: left; /* Alinhamento Horizontal - lef center right */
+            vertical-align: middle; /* Alinhamento Vertical - top middle bottom */
         }
-
-        td.dado {
-            background-color: yellow;
+        
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
@@ -47,17 +46,17 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha">
-            <td class="dado">A2</td>
+        <tr">
+            <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!-- Segunda Linha -->
             <td>A3</td>
-            <td class="dado">B3</td>
-            <td>C3</td>
+            <td>B3</td>
+            <td class="numero">C3</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A4</td>
             <td>B4</td>
             <td>C4</td> 
