--- a/exercicios/ex0023/tablea002.html
+++ b/exercicios/ex0023/tablea002.html
@@ -16,9 +16,19 @@
             border: 1px solid black;
             padding: 18px;
         }
+        caption {
+            font-size: 1.5em;
+            padding: 10px;
+            font-weight: bold;
+            background-color: lightgray;
+            text-align: left;
+        }
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+        tbody > tr:nth-child(odd) {
+            background-color: lightgrey;
         }
         .num {
             text-align: right;
@@ -31,6 +41,7 @@
     <!-- 
         ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -39,10 +50,11 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -157,8 +169,8 @@
         </tbody>
         <tfoot>
             <tr>
-            <th>Total de Habitantes</th>
-            <th class="num"><strong>213.993.437</strong></th>
+            <th scope="row">Total de Habitantes</th>
+            <td class="num"><strong>213.993.437</strong></td>
             </tr>
         </tfoot>
             </tr>
